# struct_to_query

./: LICENSE  README.md
struct_to_query/: Cargo.toml
struct_to_query/src/: main.rs
struct_to_query/tests/: test.rs
struct_to_query/to_query/: Cargo.toml  Readme.md
struct_to_query/to_query/src/: lib.rs
