[package]
name = "to_query"
version = "0.5.0"
edition = "2021"
authors = ["Kopasujin <Kopasujin@outlook.com>"]
license = "MIT"
repository = "https://github.com/Futsukai/struct_to_query.git"
description = """
Structure to HTTP GET Query Parameters
"""
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.78"