[package]
name = "to_query"
version = "0.5.4"
edition = "2021"
authors = ["Kopasujin <kopasujin@outlook.com>"]
license = "MIT"
repository = "https://github.com/Futsukai/struct_to_query.git"
description = """
Structure to HTTP_GET/SQL Query Parameters
"""
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.78"